--- a/java_desenvolvedores/Controle-candidatos/.vscode/tasks.json
+++ b/java_desenvolvedores/Controle-candidatos/.vscode/tasks.json
@@ -14,7 +14,7 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "problemMatcher": ["$javac"]
+            "problemMatcher": []
         }
     ]
 }
